--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  animated_text_kit: ^4.2.2
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.0
+  cloud_firestore: ^4.2.0
+  modal_progress_hud: ^0.1.3
+  moment_dart: ^0.17.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
